tests/ui/parser/closure-return-syntax.stderr
error: expected `{`, found `22`
  --> $DIR/closure-return-syntax.rs:5:23
   |
LL |     let x = || -> i32 22;
   |                       ^^ expected `{`
   |
help: you might have meant to write this as part of a block
   |
LL |     let x = || -> i32 { 22 };
   |                       +    +

error: aborting due to 1 previous error

